--- a/自动提取转让登记表和成交确认单信息/config.ini
+++ b/自动提取转让登记表和成交确认单信息/config.ini
@@ -1,10 +1,10 @@
 [register_path] #section
 
 #name,转让登记表所在文件夹路径
-path = C:\Users\zhaoy\Desktop\【拟用印版】安如3期转让协议及转让登记表
+path = C:\Users\zhaoy\Desktop\【拟用印版】XX期转让协议及转让登记表
 
 #提取的信息存放的路径名称、最终存取的文件名称
-investors_info = 安悦项目三期投资者联系信息.xlsx
+investors_info = XX项目三期投资者联系信息.xlsx
 
 [account_path]
 
