--- a/自动拆分excel并发送邮件/0716重新整理/config.ini
+++ b/自动拆分excel并发送邮件/0716重新整理/config.ini
@@ -32,8 +32,8 @@ mail_body =
 	<p><b>尊敬的投资者：</b></p>
                 <p>您好，请查收贵司本次投资分配明细表，以及受托报告，详见附件。</p>
                 <p>如有任何问题，请及时联系我们。</p>
-                <font color="gray" size="2">赵运超</font><br>
-                <font color="gray" size="2">手机：18924588577/13902319827</font><br/>
+                <font color="gray" size="2">name</font><br>
+                <font color="gray" size="2">手机：</font><br/>
 
 #7、附件，其中附件1默认为拆分的分配表，附件2为受托报告或其它文件，填入文件路径则附上，留空就没有该附件
 attach_report = D:\example\分配表\小计.xlsx
